# practical_cdm_benchmark

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  pytest.yml  ruff.yml
cdm/Prompts/: all_info.py  parser.py  retry.py  tool_agent.py
cdm/Tools/: labs.py  microbio_test.py  physical_exam.py  pmh.py
cdm/benchmark/: data_models.py  models.py  utils.py
cdm/database/: connection.py  queries.py  utils.py
cdm/eval/: acc_metrics.py  benchmark_evaluator.py
cdm/evaluators/: Evaluation_Framework.md  __init__.py  appendicitis_evaluator.py  cholecystitis_evaluator.py  diverticulitis_evaluator.py  graphing_utils.py  mappings.py  pancreatitis_evaluator.py  pathology_evaluator.py  utils.py
cdm/llms/: agent.py  data_models.py  vllm_config.py  vllm_inference.py
cdm/prompts/: all_info.py  cdm.py  context_control.py  full_info.py  gen_prompt_cdm.py  gen_prompt_full_info.py  parser.py  retry.py  text_utils.py  utils.py
cdm/tools/: __init__.py  context.py  diagnosis_criteria.py  lab_mappings.py  lab_utils.py  labs.py  microbiology.py  physical_exam.py  radiology.py
configs/benchmark/: base.yaml  benchmark.yaml  cdm.yaml  demo.yaml  full_info.yaml  single_case.yaml
configs/database/: benchmark_creation.yaml  text_processing.yaml
configs/vllm_config/: deepseekR1_14B.yaml  gemma3_12B.yaml  (+18 more)
database/: Dataset_Overview.md  Dataset_Specification.md  README.md  create_benchmark.py  create_cdmv1_benchmark.py  hadm_id_list.txt
scripts/: analyze_diagnosis_keywords.py  demo_clinical_workflow.py  llm_langchain_all.py  llm_langchain_auto.py  llm_langchain_bench_all.py  llm_langchain_bench_auto.py  llm_langchain_manuel.py  llm_mock_loop.py  run_benchmark.py  run_benchmark_cdm.py  run_benchmark_full_info.py  run_single_case.py  test_diagnosis_criteria_tool.py  util.py  vllm_test.py
slurm/: run_model.sbatch  vllm_test.sbatch
tests/: __init__.py
(+48 files in other folders)
